2008-06-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Add an errback after cleaning the components and show
	an error message if some components are busy.

	* data/glade/select-producers-wizard.glade:
	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/wizard/productionsteps.py:
	Make sure that the select production step is only showing
	necessary widgets when opened.
	Only show checkbuttons and combos when needed.

2008-06-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/kiwipatches.py (FluLibgladeWidgetTree.__init__):
	Do not require the view to have the gladeTypedict variable set.

	* flumotion/admin/gtk/adminwindow.py:
	clean up debug marker api and location.

	* flumotion/admin/gtk/adminwindow.py:
	(AdminWindow._createUI): Use kiwi GladeDelegate, make
	statusbar private

	* flumotion/admin/gtk/adminwindow.py:
	Rename internal variables and some internal methods to be easier
	to read. Use show instead of show_all.
	Call _updateComponents a bit more often.

	* flumotion/admin/gtk/componentview.py
	(ComponentView._componentInactiveToUnset): check if
	self._currentComponentState is None before using it to avoid
	a shutdown race.

2008-06-04  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion/extern/log/log.py:
	* flumotion/manager/base.py:
	Fixes #1013: Sent the debug marker to all components that have
	an avatar. Refactor writeDebugMarker to use a table for the
	methods instead of using a if/elif/else structure.

2008-06-03  Jordi Massaguer i Pla  <jordi@flumotion.com>

	reviewed by: Johan Dahlin  <johan@flumotion.com>

	* data/glade/debug-marker.glade:
	New interface for sending a marker to the manager to write it on the log.
	* flumotion/admin/gtk/adminwindow.py:
	Added a new action on the debug menu that opens a window for sending
	a marker to the manager to write it on the log.
	* flumotion/admin/gtk/debugmarkerview.py:
	New interface for sending a marker to the manager to write it on the log.