@@ -1,6 +1,11 @@
 2008-06-04  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/admin/gtk/adminwindow.py:
+	Refactor and reuse the same error message when
+	cleaning the components from the toolbar too, not just
+	before running the wizard.
+
+	* flumotion/admin/gtk/adminwindow.py:
 	Add an errback after cleaning the components and show
 	an error message if some components are busy.
 
